--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,21 @@
+spring.datasource, uri=jdbch2mem:malli
 
+spring.datasource, username=sa
+
+spring.datasource.password=
+
+spring,datasource,driver-class-name=org.h2.Driver
+
+spring.h2.console.enabled=true
+
+spring 1pa,show-sql=true
+
+#for actuators
+
+management,endpoints.web.exposure, include
+
+server.port=8070
+
+ management.metrics.export.zipkin.enabled=true
+
+ management,tracing.sampling.probability=1.0
