Address-server.application

--- a/application.properties
+++ b/application.properties
@@ -1,21 +1,21 @@
-spring.datasource, uri=jdbch2mem:malli
+spring.datasource.url=jdbch2mem:malli
 
-spring.datasource, username=sa
+spring.datasource.username=sa
 
 spring.datasource.password=
 
-spring,datasource,driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 
 spring.h2.console.enabled=true
 
-spring 1pa,show-sql=true
+spring 1pa.show-sql=true
 
 #for actuators
 
-management,endpoints.web.exposure, include
+management.endpoints.web.exposure.include
 
 server.port=8070
 
  management.metrics.export.zipkin.enabled=true
 
- management,tracing.sampling.probability=1.0
+ management.tracing.sampling.probability=1.0
